misc power widget fix - thank tchaari

--- a/res/xml/power_widget_settings.xml
+++ b/res/xml/power_widget_settings.xml
@@ -46,7 +46,9 @@
             android:key="brightness_location"
             android:entries="@array/brightness_location_entries"
             android:entryValues="@array/brightness_location_values"
-            android:title="@string/brightness_location_title" />
+            android:title="@string/brightness_location_title" 
+	    android:dependency="expanded_widget" 
+       />
 
     </PreferenceCategory>
 
