--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1004,20 +1004,16 @@
         <item>2</item>
     </string-array>
 
-    <string-array name="entries_status_bar_battery" translatable="false">
-        <item>@string/status_bar_style_icon</item>
-        <item>@string/status_bar_battery_status_percentage</item>
-        <item>@string/status_bar_battery_status_circle</item>
-        <item>@string/status_bar_battery_status_circle_percentage</item>
-        <item>@string/status_bar_style_hidden</item>
+    <string-array name="entries_status_bar_battery">
+        <item>Icon (default)</item>
+        <item>Percentage</item>
+        <item>Hidden</item>
     </string-array>
 
     <string-array name="values_status_bar_battery" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
-        <item>3</item>
-        <item>4</item>
     </string-array>
 
      <string-array name="entries_status_bar_signal" translatable="false">
@@ -1359,6 +1355,7 @@
         <item>Text only</item>
         <item>Icon with text</item>
         <item>Icon with centered text</item>
+        <item>CircleMOD</item>
         <item>Hide</item>
     </string-array>
 
@@ -1367,6 +1364,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>5</item>
         <item>4</item>
     </string-array>
 
