--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1355,7 +1355,8 @@
         <item>Text only</item>
         <item>Icon with text</item>
         <item>Icon with centered text</item>
-        <item>CircleMOD</item>
+        <item>CircleMOD(no %)</item>
+        <item>CircleMod(with %)</item>
         <item>Hide</item>
     </string-array>
 
@@ -1364,8 +1365,9 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
-        <item>5</item>
         <item>4</item>
+        <item>5</item>
+        <item>6</item>
     </string-array>
 
     <!-- clock stuff -->
