Ability to force Dual panel for any device - 2/2, only works on settings and other framework related apps

--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -15,6 +15,12 @@
             android:title="@string/recent_kill_all"
             android:summary="@string/recent_kill_all_summary" />
 
+        <CheckBoxPreference
+			android:key="force_dualpanel"
+			android:title="@string/multipane_ui"
+			android:summary="@string/multipane_ui_summary"
+			android:defaultValue="false" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
