Setting Highend GFX to true by default

--- a/res/xml/performance_settings.xml
+++ b/res/xml/performance_settings.xml
@@ -55,7 +55,7 @@
 	    android:key="high_end_gfx"
 	    android:title="@string/high_end_gfx_title"
 	    android:summary="@string/high_end_gfx_summary"
-	    android:defaultValue="false" />
+	    android:defaultValue="true" />
         
 	</PreferenceCategory>
 
