--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -27,6 +27,11 @@
             android:summary="@string/tablet_ui_summary"
             android:defaultValue="false" />
 
+        <Preference
+            android:key="lcd_density_setup"
+            android:title="@string/lcd_density_title"
+            android:summary="@string/lcd_density_summary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
