--- a/res/xml/security_settings_cnd.xml
+++ b/res/xml/security_settings_cnd.xml
@@ -26,6 +26,11 @@
             android:title="@string/unlock_menu_unlock_title"
             android:summary="@string/unlock_menu_unlock_summary" />
 
+         <CheckBoxPreference
+            android:key="home_unlock"
+            android:title="@string/unlock_home_unlock_title"
+            android:summary="@string/unlock_home_unlock_summary" />
+
         <CheckBoxPreference
             android:key="quick_unlock_control"
             android:title="@string/unlock_quick_unlock_control_title"
