Settings: Modify DOW in Statusbar to allow a custom DateFormat string (2/2)
Conflicts:

	res/values/arrays.xml

Change-Id: I5763ccbce363f105d7f633eb7770b24becdfc2f0

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -75,11 +75,23 @@
             android:title="@string/title_clock_ampm_entries" />
 
         <ListPreference
-            android:key="clock_weekday"
-            android:title="@string/enable_clock_weekday"
-            android:summary="@string/enable_clock_weekday_summary"
-            android:entries="@array/clock_weekday_entries"
-            android:entryValues="@array/clock_weekday_values" />
+            android:key="clock_date_display"
+            android:title="@string/clock_date_display"
+            android:summary="@string/clock_date_display_summary"
+            android:entries="@array/clock_date_display_entries"
+            android:entryValues="@array/clock_date_display_values" />
+
+        <ListPreference
+            android:key="clock_date_style"
+            android:title="@string/clock_date_style"
+            android:entries="@array/clock_date_style_entries"
+            android:entryValues="@array/clock_date_style_values" />
+
+        <ListPreference
+            android:key="clock_date_format"
+            android:title="@string/clock_date_format"
+            android:entries="@array/clock_date_format_entries"
+            android:entryValues="@array/clock_date_format_values" />
 
     </PreferenceCategory>
 
