--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -86,6 +86,11 @@
     <PreferenceCategory
         android:key="additional_options"
         android:title="@string/additional_options_title">
+
+
+        <com.android.settings.widgets.SeekBarPreference
+             android:key="stat_bar_transparency"
+             android:title="@string/status_bar_transparency_title" />
         
         <CheckBoxPreference 
             android:key="status_bar_brightness_control"
