--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1875,16 +1875,24 @@
 
     <string-array name="lockscreen_widgets_values">  
         <item>0</item>  
-        <item>1</item>
-        <item>2</item>  
-        <item>3</item>
+        <item>1</item>  
     </string-array>
     
     <string-array name="lockscreen_widgets_entries">
         <item>One-Five</item>
-        <item>One-Five Centered</item>
         <item>Six-Eight</item>  
-        <item>Six-Eight Centered</item>
+    </string-array>
+
+    <string-array name="lockscreen_clock_align_entries">
+        <item>@string/lockscreen_clock_align_left</item>
+        <item>@string/lockscreen_clock_align_center</item>
+        <item>@string/lockscreen_clock_align_right</item>
+    </string-array>
+
+    <string-array name="lockscreen_clock_align_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
     </string-array>
 
     <string-array name="navring_dialog_entries">
