--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -30,13 +30,12 @@
             android:entryValues="@array/lockscreen_background_values"/>
 
         <ListPreference
-            android:key="lockscreen_widgets"
+            android:key="lockscreen_clock_align"
             android:persistent="false"
-            android:dialogTitle="@string/lockscreen_widgets_title"
-            android:title="@string/lockscreen_widgets_title"
-            android:entries="@array/lockscreen_widgets_entries"
-            android:entryValues="@array/lockscreen_widgets_values"
-            android:summary="@string/lockscreen_widgets_summary" />
+            android:dialogTitle="@string/lockscreen_clock_align_title"
+            android:title="@string/lockscreen_clock_align_title"
+            android:entries="@array/lockscreen_clock_align_entries"
+            android:entryValues="@array/lockscreen_clock_align_values"/>
         
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="lockscreen_text_color"
@@ -74,6 +73,15 @@
             android:fragment="com.android.settings.cnd.ScreenSecurity"
             android:title="@string/screen_security_category"
             android:summary="@string/screen_security_summary" />
+
+        <ListPreference
+            android:key="lockscreen_widgets"
+            android:persistent="false"
+            android:dialogTitle="@string/lockscreen_widgets_title"
+            android:title="@string/lockscreen_widgets_title"
+            android:entries="@array/lockscreen_widgets_entries"
+            android:entryValues="@array/lockscreen_widgets_values"
+            android:summary="@string/lockscreen_widgets_summary" />
 
         <Preference
             android:fragment="com.android.settings.cnd.LockscreenTargets"
