--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -91,7 +91,7 @@
     <!-- Performance -->
     <header
         android:id="@+id/performance_settings"
-        android:fragment="com.android.settings.cnd.PerformanceSettings"
+        android:fragment="com.android.settings.performance.PerformanceSettings"
         android:icon="@drawable/ic_settings_performance"
         android:title="@string/performance_settings_title" />
 
