Input: Toggle to disable fullscreen keyboard (2/2)
Allows user to disable fullscreen editing when the keyboard is in landscape.

Change-Id: I37ea3d3cfd0efd3b9aa1a6780ae0dc8ef716f571

--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -27,6 +27,12 @@
             android:summary="@string/tablet_ui_summary"
             android:defaultValue="false" />
 
+        <CheckBoxPreference
+            android:key="disable_fullscreen_keyboard"
+            android:title="@string/disable_fullscreen_keyboard_title"
+            android:summary="@string/disable_fullscreen_keyboard_summary"
+            android:defaultValue="false" />
+
         <Preference
             android:key="lcd_density_setup"
             android:title="@string/lcd_density_title"
