--- a/res/xml/language_settings.xml
+++ b/res/xml/language_settings.xml
@@ -94,6 +94,7 @@
 
     <PreferenceCategory android:key="pointer_settings_category"
             android:title="@string/pointer_settings_category">
+
         <PreferenceScreen
                 android:fragment="com.android.settings.inputmethod.StylusGestures"
                 android:key="stylus_gestures"
@@ -103,6 +104,12 @@
                 android:key="pointer_speed"
                 android:title="@string/pointer_speed"
                 android:dialogTitle="@string/pointer_speed" />
+
+        <CheckBoxPreference android:key="stylus_icon_enabled"
+                android:title="@string/stylus_icon_enabled_title"
+                android:summary="@string/stylus_icon_enabled_summary"
+                android:defaultValue="false"
+                android:persistent="false" />
     </PreferenceCategory>
 
     <PreferenceCategory android:key="game_controller_settings_category"
