Custom notification drawer Wallpaper and alpha
- gives the ability to choose alpha and background of notification drawer
- also code cleanup
- thanks a bunch to tarak which optimzed a lot
- and special thanks to Josh....he knows what he did lmao

cheers

Change-Id: I8876bc5d189f83e92974203603f4dcae5d6b7a90

--- a/res/xml/power_widget_settings.xml
+++ b/res/xml/power_widget_settings.xml
@@ -47,8 +47,16 @@
             android:entries="@array/brightness_location_entries"
             android:entryValues="@array/brightness_location_values"
             android:title="@string/brightness_location_title" 
-	    android:dependency="expanded_widget" 
-       />
+	        android:dependency="expanded_widget" />
+
+         <Preference
+            android:key="notification_wallpaper"
+            android:title="@string/notification_wallpaper_title"
+            android:summary="@string/notification_wallpaper_summary" />
+
+        <com.android.settings.widgets.SeekBarPreference
+             android:key="notification_wallpaper_alpha"
+             android:title="@string/notif_wallpaper_alpha_title" />
 
     </PreferenceCategory>
 
