Alternate Default App Picker (1 of 2)
based on AOKP commit

This will allow an alternate Default App Picker
much like the old GB style of a checkbox for Use Always.

ICS/JB instituted this new picker that requires the user to either select
Just Once or Always.  This style will launch the app with a single click,
but provide the 'Always' check box like in GB......

Change-Id: I63787f1ade7ffd6d44cf2df3d4d724afac3705a3
Signed-off-by: Zaphod <mwilson@acesappraisal.com>

--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -17,9 +17,21 @@
             android:defaultValue="false" />
 
         <CheckBoxPreference
+            android:key="use_alt_resolver"
+            android:title="@string/alt_resolver"
+            android:summary="@string/alt_resolver_summary"
+            android:defaultValue="false" />
+
+        <CheckBoxPreference
             android:key="recent_kill_all"
             android:title="@string/recent_kill_all"
             android:summary="@string/recent_kill_all_summary" />
+
+        <CheckBoxPreference
+            android:key="disable_fullscreen_keyboard"
+            android:title="@string/disable_fullscreen_keyboard_title"
+            android:summary="@string/disable_fullscreen_keyboard_summary"
+            android:defaultValue="false" />
 
         <CheckBoxPreference
 			android:key="force_dualpanel"
@@ -31,12 +43,6 @@
             android:key="mode_tabletui"
             android:title="@string/tablet_ui"
             android:summary="@string/tablet_ui_summary"
-            android:defaultValue="false" />
-
-        <CheckBoxPreference
-            android:key="disable_fullscreen_keyboard"
-            android:title="@string/disable_fullscreen_keyboard_title"
-            android:summary="@string/disable_fullscreen_keyboard_summary"
             android:defaultValue="false" />
 
         <Preference
